// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/Input Default 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r12:"
  >
    Input Label 
  </label>
  <p
    className="text-light-body-300 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":r12:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":r12:-description"
      aria-invalid={false}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-400"
      id=":r12:"
      placeholder="Input placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Input Disabled 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r14:"
  >
    Input Label 
  </label>
  <p
    className="text-light-body-300 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":r14:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":r14:-description"
      aria-invalid={false}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-400"
      disabled={true}
      id=":r14:"
      placeholder="Input placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Input Error 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r13:"
  >
    Input Label 
  </label>
  <p
    className="text-light-body-300 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":r13:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":r13:-description"
      aria-errormessage="Field Required"
      aria-invalid={true}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-error focus:border-error"
      id=":r13:"
      placeholder="Input placeholder"
      type="text"
    />
  </div>
  <div
    className="flex w-full items-center gap-3 mt-2"
  >
    <div
      style={
        Object {
          "height": undefined,
          "width": 20,
        }
      }
    />
    <span
      className="w-full text-left text-error text-body-500"
      data-testid="txt"
    >
      Field Required
    </span>
  </div>
</div>
`;
